# glyph-agents

./: .gitignore  README.md  pyproject.toml
examples/: 01_query_helper.py  02_query_streamed.py  03_query_then_receive_response.py  04_query_and_receive_response.py  05_receive_messages_multiple_turns.py  06_sessions.py  07_tools_and_permissions.py  08_openai_reasoning.py  09_resolve_backend.py  10_claude_async_prompt_iterable.py  11_websearch_tool_calls.py  12_webfetch_tool_calls.py  README.md  example_agnos.py  example_claude.py  example_openai.py
examples/17_workflow_markdown/: handlers.py  workflow.md
examples/18_workflow_mardown_python/: workflow.md
examples/18_workflow_markdown_python/: main.py  workflow.md
examples/19_workflow_markdown_bash/: hello.sh  main.py  workflow.md
examples/21_workflow_markdown_model_override/: main.py  workflow.md
examples/22_workflow_markdown_artifacts/: workflow.md
examples/agnos/: coding_agent_cli.py  query_and_receive.py  simple_query.py  stream.py
src/agnos/: __init__.py  approvals.py  client.py  messages.py  options.py  query.py
src/agnos/backends/: __init__.py  base.py
src/agnos/backends/claude/: backend.py
src/agnos/backends/openai/: __init__.py  backend.py  pricing.py
src/agnos/backends/openai/tools/: __init__.py  apply_patch.py  bash.py  glob.py  grep.py  read.py  web_fetch.py
src/glyph/: __init__.py  approvals.py  cli.py  cli_registry.py  client.py  options.py  query.py  types.py  usage.py
src/glyph/artifacts/: __init__.py  change_request.py  ci.py  command.py  core.py  misc.py  project.py  repo.py  worktree.py
src/glyph/backends/: __init__.py  base.py
src/glyph/backends/claude/: __init__.py  backend.py
src/glyph/backends/openai/: backend.py  pricing.py
src/glyph/backends/openai/tools/: __init__.py  apply_patch.py  bash.py  glob.py  grep.py  read.py  utils.py  web_fetch.py
src/glyph/workflows/: __init__.py  markdown.py
tests/: test_query_replay.py  test_workflow_markdown.py  test_workflow_options.py
tests/sdk/: test_tools.py
tests/workflows/: test_cli.py  test_workflow_markdown.py
